# rv-trogen

./: .coverage  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  OPTIMIZED_FLOW.txt  README.md  diagnose_patterns.py  install.py  project_tree.txt  pyproject.toml  repo_tree.txt  requirements.txt  setup.py
config/: simulation_config.py
docs/: ARCHITECTURE.md  COMMANDS_REFERENCE.md  My Signal Classification Defense.docx  OPTIMIZED_FLOW_V2.txt  QUICK_START.md  SIMULATION_SETUP.md  SIX_PATTERN_DEFENSE_PARAGRAPHS.md  STEP_GUIDE.md  TEMPLATES.md  TRUSTHUB_ADAPTATION_VISUAL.txt  TRUST_HUB_PATTERNS.md  Trust_hub_performance_note.md  WINDOWS_TIPS.md  parser.md
docs/examples/: cva6_tutorial.md  ibex_tutorial.md  rsd_tutorial.md
examples/: README.md  batch_generation_report.txt  parse_example.py  parser_usage.py
examples/cva6/: README.md
examples/ibex/: README.md
examples/rsd/: README.md
generated_trojans_test/: T1_ibex_cs_registers_DoS.sv  T2_ibex_cs_registers_Leak.sv  T3_ibex_cs_registers_Privilege.sv  T4_ibex_cs_registers_Integrity.sv  T5_ibex_cs_registers_Availability.sv  T6_ibex_cs_registers_Covert.sv
scripts/: Batch_full_pipeline.py  analyze_vcd.py  batch_generate.py  batch_parse.py  batch_simulation_test.py  classify_signals.py  diagnose_skipped_trojans.py  dynamic_testbench_generator.py  extract_signals_helper.py  generate_trojans.py  parse_and_rank.py  prepare_multi_trojan_simulation.py  prepare_simulation.py  run_simulations.py  setup_simulation.py  simple_parser.py  validate_compilation.py
signal_classifications/: CVA6_signals.csv  CVA6_summary.txt  RSD_signals.csv  RSD_summary.txt  ibex_signals.csv  ibex_summary.txt  signals_CVA6.txt  signals_RSD.txt  signals_ibex.txt
simulation_results/: trojan_integration_analysis.json
simulation_results/analysis/: comparison_report.txt  (+3 more)
src/: __init__.py
tests/: __init__.py  test_generator.py  test_parser.py  test_signal_extraction.py
tests_extra/: test_step11_template_integration.py
(+3062 files in other folders)
