[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rv-trogen"
version = "1.0.0"
description = "RTL-Level Hardware Trojan Generation for RISC-V Processors"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sharjeel Imtiaz", email = "sharjeelimtiazprof@gmail.com"}
]
keywords = [
    "hardware-trojan",
    "risc-v",
    "security",
    "rtl",
    "verilog",
    "systemverilog",
    "formal-verification",
    "trust-hub",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "vcdvcd>=2.3.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/sharjeelimtiaz27/rv-trogen"
Documentation = "https://github.com/sharjeelimtiaz27/rv-trogen/blob/main/docs"
Repository = "https://github.com/sharjeelimtiaz27/rv-trogen"
Issues = "https://github.com/sharjeelimtiaz27/rv-trogen/issues"

[project.scripts]
rv-trogen = "scripts.generate_trojans:main"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"
